--- a/windforce-innovations/src/index.css
+++ b/windforce-innovations/src/index.css
@@ -1,4 +1,13 @@
 :root {
+	--color-black-olive: #34403a;
+	--color-cal-poly-green: #285238;
+	--color-forest-green: #138a36;
+	--color-green-success: #04e824;
+	--color-spring-green: #18ff6d;
+	--color-black-olive: #1f271b;
+	--color-light-cyan: #d4f5f5;
+
+	font-family: 'Montserrat', sans-serif;
 }
 
 * {
@@ -28,42 +37,8 @@ h1 {
 	line-height: 1.1;
 }
 
-button {
-	border-radius: 8px;
-	border: 1px solid transparent;
-	padding: 0.6em 1.2em;
-	font-size: 1em;
-	font-weight: 500;
-	font-family: inherit;
-	background-color: #1a1a1a;
-	cursor: pointer;
-	transition: border-color 0.25s;
-}
-button:hover {
-	border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-	outline: 4px auto -webkit-focus-ring-color;
-}
-
 .container {
-	width: 1600px;
-	height: 100vh;
-	max-width: 1600px;
+	min-width: 320px;
+	max-width: 1280px;
 	margin: 0 auto;
-	background-color: yellow;
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
 }
