--- a/windforce-innovations/src/index.css
+++ b/windforce-innovations/src/index.css
@@ -2,7 +2,7 @@
 	--color-black-olive: #34403a;
 	--color-cal-poly-green: #285238;
 	--color-forest-green: #138a36;
-	--color-green-success: #04e824;
+	--color-green-success: #49bd59;
 	--color-spring-green: #18ff6d;
 	--color-black-olive: #1f271b;
 	--color-light-cyan: #d4f5f5;
