--- a/windforce-innovations/src/index.css
+++ b/windforce-innovations/src/index.css
@@ -7,6 +7,7 @@
 	--color-black-olive: #1f271b;
 	--color-light-cyan: #d4f5f5;
 	--color-yellow-highlight: #ecffd1;
+	--color-text-neutral: #3f3f3f;
 
 	font-family: 'Montserrat', sans-serif;
 }
@@ -42,6 +43,9 @@ h1 {
 .container {
 	min-width: 320px;
 	max-width: 1280px;
+	margin: 0 auto;
+	text-align: center;
+	
 }
 
 .fullWidthContainer {
@@ -50,4 +54,37 @@ h1 {
 
 .fullHeightContainer {
 	height: 100vh;
+}
+
+li {
+	list-style: none;
+}
+
+.flexCentered {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+section {
+	width: 100vw;
+	height: 100vh;
+}
+
+.sectionTitle h2 {
+	font-size: 1.75;
+	font-weight: 600;
+	margin-bottom: 1rem;
+}
+
+.sectionTitle p {
+	color: var(--color-text-neutral);
+	font-size: 1rem;
+	line-height: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+	.sectionTitle h2 {
+		font-size: 3.75rem;
+	}
 }
