fixing some styling bugs

--- a/windforce-innovations/src/index.css
+++ b/windforce-innovations/src/index.css
@@ -31,6 +31,7 @@ body {
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+	overflow-x: hidden;
 }
 
 h1 {
@@ -45,7 +46,6 @@ h1 {
 	max-width: 1280px;
 	margin: 0 auto;
 	text-align: center;
-	
 }
 
 .fullWidthContainer {
