--- a/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
+++ b/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
@@ -1,8 +1,9 @@
 .cardWrapper {
-	margin: 2rem 1rem;
+	margin: 2rem 10px;
 	display: flex;
 	flex-direction: row;
-	width: 700px;
+	min-width: 400px;
+	max-width: 700px;
 	height: 350px;
 	box-shadow: -2px 0px 26px 20px rgba(0, 0, 0, 0.062);
 	-webkit-box-shadow: -2px 0px 26px 20px rgba(0, 0, 0, 0.062);
@@ -44,7 +45,6 @@
 	line-height: 1.6rem;
 	padding: 0 3rem;
 }
-
 
 .cardWrapperReversed {
 	flex-direction: row-reverse;
