--- a/windforce-innovations/src/components/Sections/Contact/Contact.module.css
+++ b/windforce-innovations/src/components/Sections/Contact/Contact.module.css
@@ -1,4 +1,4 @@
-.faqContainer {
+.contactContainer {
 	margin: 5rem 10px;
 	display: flex;
 	flex-direction: column;
@@ -10,25 +10,25 @@
 	margin-bottom: 1rem;
 }
 
-.servicesTitle h2 {
+.contactTitle h2 {
 	font-size: 2.4rem;
 }
 
-.faqDisplay {
+.formDisplay {
 	width: 90%;
 	text-align: left;
 	margin: 10px;
 }
 
-.faqDisplay p {
+.formDisplay p {
 	color: var(--color-text-neutral);
 	padding-left: 20px;
 	margin: 1rem;
 }
 
 @media screen and (min-width: 1024px) {
-	.faqContainer {
-		flex-direction: row;
+	.contactContainer {
+		flex-direction: row-reverse;
 	}
 
 	.titleSection {
@@ -37,7 +37,7 @@
 		margin-right: 5rem;
 	}
 
-	.faqDisplay {
+	.formDisplay {
 		width: 100%;
 	}
 }
