--- a/windforce-innovations/src/components/Sections/Hero/Hero.module.css
+++ b/windforce-innovations/src/components/Sections/Hero/Hero.module.css
@@ -21,8 +21,9 @@
 }
 
 .heroWrapper h1 {
+	padding-top: 2rem;
 	max-width: 55rem;
-	font-size: 4rem;
+	font-size: 2.5rem;
 	font-weight: 500;
 	line-height: 5rem;
 	text-wrap: wrap;
@@ -43,8 +44,9 @@
 }
 
 @media (min-width: 600px) {
-	.heroTitle h1 {
-		font-size: 3rem;
+	.heroWrapper h1 {
+		padding-top: 1rem;
+		font-size: 4rem;
 		line-height: 4rem;
 	}
 
