--- a/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
+++ b/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
@@ -46,7 +46,7 @@
 	margin-bottom: 1rem;
 }
 
-.cardInfo > p {
+.cardInfo > p a {
 	color: var(--color-text-neutral);
 	font-size: 0.9rem;
 	line-height: 1.6rem;
