--- a/windforce-innovations/src/components/Sections/Contact/Contact.module.css
+++ b/windforce-innovations/src/components/Sections/Contact/Contact.module.css
@@ -28,6 +28,7 @@
 	font-size: 1rem;
 	color: #d4f5f59c;
 	font-weight: 300;
+	padding-right: 10px;
 }
 
 .contactTitle ul li {
@@ -39,7 +40,6 @@
 .formDisplay {
 	width: 100%;
 	text-align: left;
-	margin: 10px;
 }
 
 .formDisplay form {
@@ -51,7 +51,6 @@
 
 .formDisplay input,
 textarea {
-	width: 80%;
 	border: 1px solid #3f3f3f18;
 	background-color: #c5c5c538;
 	padding: 1.25rem 1.5rem;
@@ -67,7 +66,7 @@ textarea::placeholder {
 
 .formDisplay p {
 	padding-left: 20px;
-	margin: 1rem;
+	margin: 1rem 0;
 }
 
 .sendButton {
@@ -104,5 +103,24 @@ textarea::placeholder {
 
 	.formDisplay {
 		margin-top: 1rem;
+	}
+
+	.heroContainer img {
+		position: absolute;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		filter: brightness(0.4);
+	}
+
+	.formDisplay input,
+	textarea {
+		border: 1px solid #3f3f3f18;
+		background-color: #c5c5c538;
+		padding: 1.25rem 1.5rem;
+		display: flex;
+		font-weight: 500;
+		color: #ffffff;
 	}
 }
