--- a/windforce-innovations/src/components/Sections/Hero/Hero.module.css
+++ b/windforce-innovations/src/components/Sections/Hero/Hero.module.css
@@ -6,7 +6,7 @@
 	position: absolute;
 	z-index: -1;
 	width: 100%;
-	height: 130%;
+	height: 100%;
 	object-fit: cover;
 	filter: brightness(0.4);
 }
@@ -25,16 +25,14 @@
 	max-width: 55rem;
 	font-size: 2.5rem;
 	font-weight: 500;
-	line-height: 5rem;
+	line-height: 3rem;
 	text-wrap: wrap;
 	text-shadow: 4px 4px 33px rgba(255, 255, 255, 0.37);
 }
 
 .heroWrapper p {
-	max-width: 55rem;
 	padding: 2rem 0 3rem;
-	font-size: 1.3rem;
-	letter-spacing: 0.1rem;
+	font-size: 1.1rem;
 	line-height: 2rem;
 }
 
@@ -61,8 +59,11 @@
 }
 
 @media (min-width: 1024px) {
-	.heroTitle h1 {
-		font-size: 4rem;
-		line-height: 5rem;
+	.heroWrapper p {
+		max-width: 55rem;
+		padding: 2rem 0 3rem;
+		font-size: 1.3rem;
+		letter-spacing: 0.1rem;
+		line-height: 2rem;
 	}
 }
