--- a/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
+++ b/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
@@ -1,8 +1,8 @@
 .cardWrapper {
-	margin: 2rem;
+	margin: 10px 0;
 	display: flex;
 	flex-direction: row;
-	min-width: 400px;
+	min-width: 350px;
 	max-width: 700px;
 	height: 350px;
 	box-shadow: -2px 0px 26px 20px rgba(0, 0, 0, 0.062);
@@ -37,7 +37,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	margin: 2rem;
+	margin: 10px;
 }
 
 .cardInfo h3 {
@@ -69,5 +69,9 @@
 		font-size: 1.8rem;
 		font-weight: 500;
 		margin-bottom: 1rem;
+	}
+
+	.cardInfo {
+		margin: 2rem;
 	}
 }
