--- a/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
+++ b/windforce-innovations/src/components/SharedComponents/InfoCard/InfoCard.module.css
@@ -1,14 +1,13 @@
 .cardWrapper {
-	margin: 10px 0;
+	margin: 10px 10px;
 	display: flex;
-	flex-direction: row;
-	min-width: 350px;
-	max-width: 700px;
-	height: 350px;
+	flex-direction: column;
+
 	box-shadow: -2px 0px 26px 20px rgba(0, 0, 0, 0.062);
 	-webkit-box-shadow: -2px 0px 26px 20px rgba(0, 0, 0, 0.062);
 	-moz-box-shadow: -2px 0px 26px 20px rgba(0, 0, 0, 0.062);
 	transition: all 0.3s;
+	flex-wrap: nowrap;
 }
 
 .cardWrapper:hover {
@@ -18,7 +17,7 @@
 }
 
 .cardWrapperReversed {
-	flex-direction: row-reverse;
+	flex-direction: column;
 }
 
 .cardImage {
@@ -28,7 +27,7 @@
 
 .cardImage img {
 	width: 100%;
-	height: 100%;
+	height: 250px;
 	object-fit: cover;
 }
 
@@ -65,6 +64,12 @@
 }
 
 @media screen and (min-width: 1024px) {
+	.cardWrapper {
+		margin: 10px;
+		flex-direction: row;
+		height: 350px;
+	}
+
 	.cardInfo h3 {
 		font-size: 1.8rem;
 		font-weight: 500;
@@ -73,5 +78,14 @@
 
 	.cardInfo {
 		margin: 2rem;
+	}
+
+	.cardWrapperReversed {
+		flex-direction: row;
+	}
+	.cardImage img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
 	}
 }
